--- a/public/css/bs_index.css
+++ b/public/css/bs_index.css
@@ -15,7 +15,7 @@ h1 {
 	text-decoration: none}
 
 .site h1	{margin: 0;
-	font-size: 32px}
+	font-size: 36px}
 	
 /* ボックス */
 .boxA {
@@ -43,7 +43,7 @@ h1 {
 	.menu li a	{
 	  display: block;
 		padding: 5px;
-		color: #000000;
+		color: #ffffff;
 		font-size: 14px;
 		text-decoration: none;
 	}
@@ -116,7 +116,7 @@ h1 {
 	}
 
 	/* BOX Aの下に罫線を挿入 */
-	.boxA	{
+	.boxA {
 	    /*margin-bottom: 20px;*/
 		/*border-bottom: solid 1px #dddddd;*/
 	}
@@ -133,23 +133,33 @@ h1 {
   float:left;
   background-color: gray;
   width: 200px;
-  height: 750px;
+  height: 600px;
 }
 
 #sideRight {
   float:left;
   background-color: gray;
   width: 200px;
-  height: 750px;
+  height: 600px;
 }
 
 #mainContents {
-  background-image: url("../img/sky.jpg");
-  background-color:#eeeeee;
+  background-color:#ffffff;
   background-size:100% 750px;
   width: 100%;
-  height: 750px;
+  height: 600px;
   position: relative;
+}
+
+.mainBg {
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ height: 100%;
+ width: 100%;
+ background: url("../img/top_b.jpg") no-repeat center center;
+ /*background-image: url('../img/top_b.jpg');*/
+ /*background-size:50% auto;*/
 }
 
 :root {
@@ -173,46 +183,6 @@ h1 {
 .t_info td {
 	width: 300px;
 }
-/* ########### animation ########### */
-#mainContents #gear, #mainContents #gear img {
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-
-#mainContents #gear {
-    /*width: 150px;*/
-    height: 150px;
-    /*position: absolute;*/
-    bottom: 0px;
-    margin: 0px auto 0;
-    animation-name: moved;
-    animation-duration: 5s;
-}
-
-#mainContents #gear img {
-    animation-name: spin;
-    animation-duration: 5s;
-    width: var(--image-width);
-    /*height: 150px;*/
-}
-
-@keyframes moved {
-	0% {
-	    transform: translateX(0%);
-	}
-	50% {
-	    transform: translateX(calc(100% - var(--image-width)));
-	}
-	100% {
-	    transform: translateX(0%);
-	}
-}
-
-@keyframes spin {
-  0% {transform: rotate(0deg);}
-  50% {transform: rotate(360deg);}
-  100% {transform: rotate(0deg);}
-}
 
 /*******************/
 /* フッターのCSS */
@@ -221,11 +191,108 @@ h1 {
   clear:both;
   background-color: gray;
   display: flex;
-  height: 80px;
+  height: 60px;
 }
 
 #footer #f-inner {
   margin-left: auto;
   margin-right: auto;
   width: 90%;
+}
+
+
+
+/********************/
+/* ログイン
+/********************/
+.sign {
+    padding-top: 40px;
+    color: #8C55AA;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+    font-size: 23px;
+}
+
+.label {
+    color: #8C55AA;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+    font-size: 23px;
+}
+
+.un {
+	width: 76%;
+	color: rgb(38, 50, 56);
+	font-weight: 700;
+	font-size: 14px;
+	letter-spacing: 1px;
+	background: rgba(136, 126, 126, 0.04);
+	padding: 10px 20px;
+	border: none;
+	border-radius: 20px;
+	outline: none;
+	box-sizing: border-box;
+	border: 2px solid rgba(0, 0, 0, 0.02);
+	margin-top: 20px;
+	margin-bottom: 27px;
+	margin-left: 46px;
+	text-align: center;
+	font-family: 'Ubuntu', sans-serif;
+}
+
+form.form1 {
+    padding-top: 40px;
+}
+
+.pass {
+    width: 76%;
+	color: rgb(38, 50, 56);
+	font-weight: 700;
+	font-size: 14px;
+	letter-spacing: 1px;
+	background: rgba(136, 126, 126, 0.04);
+	padding: 10px 20px;
+	border: none;
+	border-radius: 20px;
+	outline: none;
+	box-sizing: border-box;
+	border: 2px solid rgba(0, 0, 0, 0.02);
+	margin-top: 20px;
+	margin-bottom: 27px;
+	margin-left: 46px;
+	text-align: center;
+	font-family: 'Ubuntu', sans-serif;
+}
+
+.un:focus, .pass:focus {
+    border: 2px solid rgba(0, 0, 0, 0.18) !important;
+    
+}
+
+.submit {
+  cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: linear-gradient(to right, #9C27B0, #E040FB);
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-left: 35%;
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+}
+
+.forgot {
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    color: #E1BEE7;
+    padding-top: 15px;
+}
+
+a {
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    color: #E1BEE7;
+    text-decoration: none
 }
