--- a/public/css/bs_index.css
+++ b/public/css/bs_index.css
@@ -1,8 +1,10 @@
-/* * {
+ * {
   margin: 0;
-  color: #ffffff;
  }
-*/
+
+body {
+	display: contents;
+}
 
 h1 {
 	font-family: Impact,Charcoal;
@@ -11,21 +13,62 @@ h1 {
 	color: #000000;
 }
 
+/* 問い合わせボタン */
+#contact_us {
+  display: inline-block;
+  padding: 7px 20px;
+  border-radius: 25px;
+  text-decoration: none;
+  color: #FFF;
+  background-image: linear-gradient(45deg, #add8e6 0%, #4682b4 100%);
+  transition: .4s;
+}
+
+#contact_us:hover {
+  background-image: linear-gradient(45deg, #add8e6 0%, #4682b4 100%);
+}
+
 .site h1 a	{color: #000000;
 	text-decoration: none}
 
 .site h1	{margin: 0;
 	font-size: 36px}
-	
+
+/* タイトル */
+#titleLogo {
+  position: relative;
+  padding: 0.25em 10px;
+  font-family: fantasy;
+  font-size: 60px;
+}
+
+#titleLogo:after{
+  content: "";
+  display: block;
+  height: 4px;
+  background: -webkit-linear-gradient(to right, rgb(70, 130, 180), transparent);
+  background: linear-gradient(to right, rgb(70, 130, 180), transparent);
+}
+
 /* ボックス */
 .boxA {
-	height:auto;
-	background-color: gray;
-	padding-top: 20px;
+    padding: 20px;
+	/*height:auto;*/
+	background: rgba(128,128,128,0.5);
+	/*padding-top: 20px;*/
 	/*padding-bottom: 10px;*/
-	padding-left: 15px;
-	padding-right: 15px;
+	/*padding-left: 15px;*/
+	/*padding-right: 15px;*/
 	display: flex;
+    position: fixed;
+    justify-content: space-between;
+    transition: .5s;
+    width: 100%;
+}
+
+.boxA.transform{
+    background: rgba(128,128,128,0.9);
+    padding: 20px;
 }
 
 /* ########### 767px以下 ########### */
@@ -128,46 +171,225 @@ h1 {
 .contents {
 	background-color: gray;
 	width: 100%;
+	font-family: fantasy;
+	/*height: 100%;*/
 }
+
 #sideLeft {
   float:left;
   background-color: gray;
   width: 200px;
-  height: 600px;
+  /*height: 600px;*/
 }
 
 #sideRight {
   float:left;
   background-color: gray;
   width: 200px;
-  height: 600px;
+  /*height: 600px;*/
 }
 
 #mainContents {
   background-color:#ffffff;
-  background-size:100% 750px;
+  background-size:100%;
   width: 100%;
-  height: 600px;
-  position: relative;
+  /*height: 800px;*/
+  /*position: relative;*/
 }
 
-.mainBg {
- display: block;
+/**************************/
+/* TOP画像 */
+#mainBg {
+ width: 1440px;
+ height: 650px;
+ padding-top: 20px;
+ padding-bottom: 20px;
+ margin-top: 100px;
+ margin-bottom: 100px;
  margin-left: auto;
- margin-right: auto;
- height: 100%;
+ margin-right: auto; 
+ background-color: #add8e6;
+ display: flex;
+}
+
+.mainImg {
+ display: block;
+ margin-top: 10px;
+ margin-left: auto;
+ margin-right: 20px;
+ width: 921px;
+ height: 614px;
+ border:5px solid #cfcfcf;
+-webkit-box-shadow: 0 10px 8px -6px #8d8c8c;
+-moz-box-shadow: 0 10px 8px -6px #8d8c8c;
+ box-shadow: 0 10px 8px -6px #8d8c8c;
+ float: right;
+}
+
+#mainContents .mainPic {
+    width: 100%;
+    height: 900px;
+    padding-top: 100px;
+    padding-bottom: 40px;
+    background-color: #ffffff;
+}
+
+#mainBg #titleWord{
+    font-family: fantasy;
+    font-size: 72px;
+    float: left;
+    background-color: #ffffff;
+    color: #000000;
+    padding: 10px 15px;
+    margin: 10px 25px;
+    line-height: 2.5;
+    letter-spacing: 20px;
+}
+/**************************/
+/* プロフィール */
+#mainPfBg  {
+ color:#000000;
+ width: 1440px;
+ height: 650px;
+ padding-top: 20px;
+ padding-bottom: 20px;
+ margin-top: 100px;
+ margin-bottom: 20px;
+ margin-left: auto;
+ margin-right: auto; 
+ background-color: #ffffff;
+}
+
+#mainContents #mainPf  {
  width: 100%;
- background: url("../img/top_b.jpg") no-repeat center center;
- /*background-image: url('../img/top_b.jpg');*/
- /*background-size:50% auto;*/
+ height: 900px;
+ padding-top: 100px;
+ padding-bottom: 40px;
+ background-color: #add8e6;
+}
+
+#mainPfBg table{
+  width: 95%;
+  border-collapse: collapse;
+  margin: 20px;
+}
+
+#mainPfBg table tr{
+  border-bottom: solid 2px white;
+}
+
+#mainPfBg table tr:last-child{
+  border-bottom: none;
+}
+
+#mainPfBg table th{
+  position: relative;
+  text-align: left;
+  width: 30%;
+  background-color: #add8e6;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+}
+
+#mainPfBg table th:after{
+  display: block;
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  top:calc(50% - 10px);
+  right:-10px;
+  border-left: 10px solid #add8e6;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+
+#mainPfBg table td{
+  text-align: left;
+  width: 70%;
+  text-align: center;
+  background-color: #eee;
+  padding: 20px 0;
+}
+/**************************/
+/* ワーキング */
+#mainWkBg  {
+ color:#000000;
+ width: 1600px;
+ height: 723px;
+ padding-top: 20px;
+ padding-bottom: 20px;
+ margin-top: 100px;
+ margin-bottom: 20px;
+ margin-left: auto;
+ margin-right: auto; 
+ background-color: #4682b4;
+}
+
+#mainContents #mainWk  {
+ width: 100%;
+ height: 900px;
+ padding-top: 100px;
+ padding-bottom: 40px;
+ background-color: #ffffff;
+}
+
+/**************************/
+/* メール */
+#mainMlBg  {
+ color:#000000;
+ width: 1440px;
+ height: 650px;
+ padding-top: 20px;
+ padding-bottom: 20px;
+ margin-top: 100px;
+ margin-bottom: 20px;
+ margin-left: auto;
+ margin-right: auto; 
+ background-color: #ffffff;
+}
+
+#mainContents #mainMl  {
+ width: 100%;
+ height: 900px;
+ padding-top: 100px;
+ padding-bottom: 40px;
+ background-color: #4682b4;
+}
+
+#mainMlBg table {
+  border-collapse: collapse;
+  margin: 20px auto;
+  /*padding: 0;*/
+  width: 850px;
+  table-layout: fixed;
+  padding: 20px;
+}
+#mainMlBg thead th{
+  padding: 1em .8em;
+  /*border-right: 5px solid #4682b4;*/
+  /*background-color: #fff;*/
+}
+#mainMlBg table tr {
+  /*background-color: #fff;*/
+  padding: 20px;
+}
+/*#mainMlBg table tr:nth-child(even){*/
+  /*background-color: #f9f9f9;*/
+/*}*/
+#mainMlBg table td {
+  padding: 20px;
+  text-align: center;
+}
+#mainMlBg table th {
+  /*font-size: .75em;*/
+  background-color: #4682b4;
+  color: #ffffff;
 }
 
 :root {
     --image-width: 150px;
-}
-
-#mainContents #mainPic {
-    height: 600px;
 }
 
 /* ########### table_info ########### */
@@ -189,7 +411,7 @@ h1 {
 /*******************/
 #footer {
   clear:both;
-  background-color: gray;
+  background-color: #808080;
   display: flex;
   height: 60px;
 }
