--- a/public/css/bs_index.css
+++ b/public/css/bs_index.css
@@ -202,6 +202,11 @@ h1 {
 }
 /**************************/
 /* TOP画像 */
+.top-img {
+    height: 400px;
+    object-fit: cover;
+}
+
 #mainBg {
  width: 1440px;
  height: 650px;
