--- a/public/css/bs_index.css
+++ b/public/css/bs_index.css
@@ -22,6 +22,8 @@ h1 {
   color: #FFF;
   background-image: linear-gradient(45deg, #add8e6 0%, #4682b4 100%);
   transition: .4s;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 
 #contact_us:hover {
